# signet-sdk

./: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
